--- a/‏‏index.html
+++ b/‏‏index.html
@@ -159,14 +159,14 @@
   <body>
     <aside class="hidden">
       <div class="logo">
-        <img src="img/logo.png" alt="Jazal" />
+        <img src="./logo.png" alt="Jazal" />
       </div>
       <h3>يرجى إدخال إسمك الأول</h3>
       <input type="text" id="nameField" />
       <button class="secondary-bg-color" id="submit-name">متابعة</button>
     </aside>
     <main class="hidden">
-      <img src="img/logo.png" width="240" height="170" alt="Computer Hope" />
+      <img src="./logo.png" width="240" height="170" alt="Computer Hope" />
       <h3 class="secondary-header-color">صور الشاشة وشاركها مع من يهتمون</h3>
       <h1 class="border secondary-bg-color">كل يوم نصوص من أجلك</h1>
       <section id="hekma" class="border">
